Fix 'Show Pictures' scroll problem.
'overflow' should be auto, not hidden to show scroll bar
when the height overflows.

--- a/client/css/scenic.css
+++ b/client/css/scenic.css
@@ -365,7 +365,7 @@ body {
     zoom: 1;
     background: rgba(255, 255, 255, 0.5);
     z-index: 1000;
-    overflow: hidden;
+    overflow: auto;
 }
 
 @media(max-width: 979px) {
